--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,53 @@
-newspaper
-flask
-flask_wtf
-elasticsearch>=7.0.0,<8.0.0
-sqlalchemy
-flask_sqlalchemy
-pluggy
-flask-login
+alembic==1.4.2
+amqp==2.5.2
+beautifulsoup4==4.8.2
+billiard==3.6.3.0
+celery==4.4.2
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+cssselect==1.1.0
+cycler==0.10.0
+elasticsearch==7.6.0
+elasticsearch7==7.6.0
+feedfinder2==0.0.4
+feedparser==5.2.1
+Flask==1.1.1
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+idna==2.9
+itsdangerous==1.1.0
+jieba3k==0.35.1
+Jinja2==2.11.1
+kiwisolver==1.1.0
+kombu==4.6.8
+lxml==4.5.0
+Mako==1.1.2
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+newspaper3k==0.2.8
+nltk==3.4.5
+numpy==1.18.1
+pandas==1.0.1
+Pillow==7.0.0
+pluggy==0.13.1
+psycopg2-binary==2.8.4
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+PyYAML==5.2
+requests==2.23.0
+requests-file==1.4.3
+six==1.14.0
+soupsieve==2.0
+SQLAlchemy==1.3.13
+tinysegmenter==0.3
+tldextract==2.2.2
+urllib3==1.25.8
+vine==1.3.0
+Werkzeug==1.0.0
+WTForms==2.2.1
