--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ numpy==1.18.1
 pandas==1.0.1
 Pillow==7.0.0
 pluggy==0.13.1
+psycopg2==2.8.4
 psycopg2-binary==2.8.4
 pyparsing==2.4.6
 python-dateutil==2.8.1
