--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
 PyYAML==5.2
+redis==3.4.1
 requests==2.23.0
 requests-file==1.4.3
 six==1.14.0
